--- a/kubernetes-commands.yml
+++ b/kubernetes-commands.yml
@@ -1,2 +1,9 @@
 # Kubernetes coomands 
- kubectl get pods || k get po # These both behave the same
+kubectl get pods || k get po # These both behave the same and used to check pods in default namespace
+kubectl get nodes
+kubectl get namespace || kubectl get ns
+kubectl get replicaset || kubectl get rs
+kubectl get deployment || kubectl get deploy
+kubectl get configmap || kubectl get cm
+kubectl get secret || k get secret
+ 
