--- a/demo-config-map.yml
+++ b/demo-config-map.yml
@@ -1,3 +1,11 @@
+# A ConfigMap is an API object used to store non-confidential data in key-value pairs.
+# Pods can consume ConfigMaps as environment variables, command-line arguments, or as configuration files in a volume.
+# Use a ConfigMap for setting configuration data separately from application code.
+# A ConfigMap is not designed to hold large chunks of data. The data stored in a ConfigMap cannot exceed 1 MiB.
+# If you need to store settings that are larger than this limit, you may want to consider mounting a volume or use a separate database or file service.
+
+---------------------------------------------------
+
 # simple config-map.yml
 
 apiVersion: v1
